--- a/examples/ExampleConfig.config
+++ b/examples/ExampleConfig.config
@@ -1,6 +1,6 @@
 {
   "SEPPmailFQDN": "securemail.contoso.de",
   "secretName": "legacyadmin@securemail.contoso.de",
-  "secretVaultName": "BuiltInLocalVault",
+  "SkipCertificateCheck": false,
   "adminPort": "8443"
 }
